# minimal_gbdes

./: CMakeLists.txt  Makefile  README  gbdes_setup.sh  pybind_setup.sh  setup_minimal.py  tmp.py
gbutil/: CMakeLists.txt  Makefile
gbutil/include/: StringStuff.h
gbutil/src/: StringStuff.cpp
include/: Instrument.h
pydir/: CMakeLists.txt  testpybind.cpp
src/: CMakeLists.txt  Main.cpp
src/subs/: CMakeLists.txt  Instrument.cpp
